fixed overflow problem on login/createAccount

--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -1,14 +1,14 @@
 .b-login {
   background-image:url(../images/EMTblue.jpg)!important;
   background-color: transparent;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  overflow: hidden
+  overflow-x:hidden;
 }
 
 body {
